--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/05-travel-list/node_modules
+/05-travel-list/package-lock.json
+
 /.pnp
 .pnp.js
 
@@ -9,6 +11,7 @@
 /coverage
 
 # production
+/05-travel-list/build
 /build
 
 # misc
